--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Startpage Papa</title>
+    <title>Fractal Tree Startpage</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <script src="coloredTree.js"></script>
   </head>
   <body>
     <div id="widmung">
-      Von Juli für Papa
+      Fractal Tree Startpage
     </div>
     <div id="canvas-and-wind-buttons">
       <div>
@@ -34,4 +34,5 @@
         </div>
     -->
   </body>
+
 </html>
